# C214_Seminario_CI

./: .gitignore  CarrinhoCompras.py  README.md  main.py  pyproject.toml  readme.md  requirements.txt  test_CarrinhoCompras.py
.github/workflows/: python-app.yml
Seminario/test/: test_CarrinhoCompras.py
test/: test_CarrinhoCompras.py
