[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "carrinhocompraWESLEY-MARCOS"
version = "0.0.1"
authors = [
  { name = "Wesley", email = "wesley.marcos@gec.inatel.br" }
]

description = "A small example package"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
homepage = "https://github.com/wesley-marcos/C214_Seminario_CI"
bug-tracker = "https://github.com/wesley-marcos/C214_Seminario_CI"

